# wizor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
.claude/: AGENTS.md
.github/workflows/: backend.yml  frontend.yml  security.yml
.planning/: HANDOFF.md  JOURNAL.md  MEMORY-INDEX.md  OPEN-QUESTIONS.md  PHASE-HISTORY.md  PLACEHOLDERS.md  PRD.md  PROJECT.md  README.md  ROADMAP.md  STATUS.md  memory.md
.planning/_meta/: BUILD-CHARTER.md  README.md  conventions.md  glossary.md  stack.md
.planning/_session-context/: README.md  VERIFY-P1-2026-06-24.md
.planning/agent-handbook/: 00-START-HERE.md  01-CONTEXT-LOADING.md  02-DELEGATION.md  03-ESCALATION.md  04-HANDOFF.md  05-PR-WORKFLOW.md  06-DEBUGGING.md  07-AI-TEAM-PIPELINE.md
.planning/contracts/: README.md
.planning/decisions/: ADR-0001-file-native-substrate.md  ADR-0002-lean-roster-8-core-plus-6-specialists.md  ADR-0003-model-tiering-by-role.md  ADR-0004-nine-step-phase-loop.md  ADR-0005-risk-tiered-post-audit.md  ADR-0006-file-native-memory.md  ADR-0007-read-only-first-roadmap.md  ADR-0008-contracts-stubs-plus-jit.md  ADR-0009-lightweight-pr-per-phase-tiered-ci.md  ADR-0010-language-ru-narrative-en-identifiers.md  ADR-0011-stack-lock.md  ADR-0012-three-track-access-model.md  ADR-0013-multi-tenancy-tenant-id-day-1.md  ADR-0019-open-pr-not-draft.md  (+7 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/wizor/: __init__.py  main.py
backend/src/wizor/analytics/: __init__.py  posthog.py
backend/src/wizor/core/: __init__.py  config.py  logging.py  tenancy.py
backend/src/wizor/db/: __init__.py  base.py  session.py
backend/src/wizor/iam/: __init__.py  models.py  seed.py
backend/src/wizor/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_analytics.py  test_config.py  test_health.py  test_metrics.py  test_worker.py
backend/tests/integration/: conftest.py  test_db_smoke.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
infra/: .env.example  Caddyfile  docker-compose.dev.yml
scripts/: dev-bootstrap.sh
(+139 files in other folders)
