[project]
name = "wizor-backend"
version = "0.1.0"
description = "WIZOR — AI Readiness Platform для РФ (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.1",
    "redis>=5.2",
    "celery>=5.4",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "posthog>=3.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (lint + format) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S", "RUF"]
# S101 (assert) разрешён в тестах; конкретный per-file ниже.
# RUF001-003: нарратив комментариев/докстрингов — RU (charter §9), кириллица намеренна.
ignore = ["S104", "RUF001", "RUF002", "RUF003"]  # S104: bind 0.0.0.0 в dev-контейнере

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"migrations/**" = ["E501", "N999"]

# --- mypy (strict) ---
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=wizor --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: тесты против реальных сервисов (PG/Redis/Keycloak); запускаются в CI",
]

[tool.coverage.run]
source = ["wizor"]
omit = ["src/wizor/worker/celery_app.py", "*/migrations/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
